resolvendo overflow do card de edição atual InterPet

--- a/src/styles/InterPet.module.css
+++ b/src/styles/InterPet.module.css
@@ -1,3 +1,7 @@
 .content {
   background-color: #f5f5f5;
+  position: absolute;
+  overflow-x: hidden;
+  z-index: 1000;
+  width: 100%;
 }
